Bug 397342 - Scale image - Print size adjustment is broken
Summary: Scale image - Print size adjustment is broken
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Usability (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: vanyossi
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-08-10 12:44 UTC by Storm Engineer
Modified: 2018-11-20 08:58 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Storm Engineer 2018-08-10 12:44:42 UTC
The print size spin boxes under "Image/Scale image to new size" behave incorrectly. When I try to input values the fields are populated by incorrect numbers. These numbers are a small fragment of the number entered.

Eg. Print size in my file is 776 x 1233 mm. When I input "800" in the first field, the values are overwritten to 125 x 202. The wrong number gets bigger by increasing the input number, but the result is not consistent.

Clicking the increase/decrease arrows increase the value by about 0.35, instead of 1.

Updating the value of the DpI field seems to update dimensions correctly.

Reproducible both with Git master and the 4.0.4 and 4.1.1 appimages.
Comment 1 vanyossi 2018-10-16 17:40:42 UTC
Git commit 3aef5274c23158c46ddd5781873d447864f3344b by Ivan Yossi.
Committed on 16/10/2018 at 17:38.
Pushed by ivany into branch 'master'.

Raise the limit for ImageSize.

This limits the cases in which print size boxes
are not in sync.

M  +7    -4    plugins/extensions/imagesize/dlg_imagesize.cc
M  +1    -1    plugins/extensions/imagesize/dlg_imagesize.h
M  +4    -4    plugins/extensions/imagesize/wdg_imagesize.ui

https://commits.kde.org/krita/3aef5274c23158c46ddd5781873d447864f3344b
Comment 2 Halla Rempt 2018-11-20 08:58:28 UTC
Git commit c962b731b515744bd4aa17ab09e8722727d762f0 by Boudewijn Rempt, on behalf of Ivan Yossi.
Committed on 20/11/2018 at 08:23.
Pushed by rempt into branch 'krita/4.1'.

Raise the limit for ImageSize.

This limits the cases in which print size boxes
are not in sync.

M  +7    -4    plugins/extensions/imagesize/dlg_imagesize.cc
M  +1    -1    plugins/extensions/imagesize/dlg_imagesize.h
M  +4    -4    plugins/extensions/imagesize/wdg_imagesize.ui

https://commits.kde.org/krita/c962b731b515744bd4aa17ab09e8722727d762f0