Raise the limit for ImageSize.

This limits the cases in which print size boxes
are not in sync.

BUG:397342